k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: public-subnet-2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.local
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/api(/|$)(.*)"
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: frontend
                port:
                  number: 80
